# fixws

./: LICENSE  cabal.project  fixws.cabal
app/: Main.hs  fixws.hs
src/Data/Char/: FixWS.hs
