cabal-version: 3.0

name:                   fixws
version:                2.2.2
synopsis:               Whitespace fixer-upper.
description:            Whitespace fixer-upper.
category:               Code,
                        Style,
copyright:              Nadia Chambers, 2019-2023 Input Output Global Inc (IOG), 2023-2024 Intersect.
author:                 Nadia Chambers
maintainer:             nadia.chambers@gmail.com
license:                BSD-3-Clause
license-files:          LICENSE
build-type:             Simple

common project-config
  if os(windows)
    buildable: False

common with-library
library
  import:               project-config

  hs-source-dirs:       src
  exposed-modules:      Data.Char.FixWS
  build-depends:        base
                      , containers
                      , composition-extra
                      , transformers

  default-language:     Haskell2010
  default-extensions:   BlockArguments
                        ConstraintKinds
                        DataKinds
                        DeriveAnyClass
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        ImpredicativeTypes
                        KindSignatures
                        LambdaCase
                        MonadComprehensions
                        MultiParamTypeClasses
                        NamedFieldPuns
                        NoMonoLocalBinds
                        OverloadedLists
                        OverloadedStrings
                        PolyKinds
                        PartialTypeSignatures
                        QuantifiedConstraints
                        RankNTypes
                        RebindableSyntax
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeApplications
                        TypeFamilies
                        TypeOperators

executable fixws
  import:               project-config
  hs-source-dirs:       src
  main-is:              Data/Char/FixWS.hs
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -Wall
                        -rtsopts
                        "-with-rtsopts=-T"
                        -main-is Data.Char.FixWS.fixWSstdio
  build-depends:        base
                      , containers
                      , composition-extra
                      , transformers
  default-extensions:   BlockArguments
                        ConstraintKinds
                        DataKinds
                        DeriveAnyClass
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        ImpredicativeTypes
                        KindSignatures
                        LambdaCase
                        MonadComprehensions
                        MultiParamTypeClasses
                        NamedFieldPuns
                        NoMonoLocalBinds
                        OverloadedLists
                        OverloadedStrings
                        PolyKinds
                        PartialTypeSignatures
                        QuantifiedConstraints
                        RankNTypes
                        RebindableSyntax
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeApplications
                        TypeFamilies
                        TypeOperators
